@@ -137,6 +137,18 @@ Average duration:
  - ``DeleteQueryAverageDuration``
  - ``OverallQueryAverageDuration``
 
+NodeStatus MBean
+----------------
+
+The ``NodeStatus`` JMX MBean exposes the status of the current node as boolean values.
+
+Metrics can be accessed using the JMX MBean object name
+``io.crate.monitoring:type=NodeStatus`` and the following attributes:
+
+ - ``Ready``
+
+   Defines if the node is able to process SQL statements.
+
 .. _JMX: http://docs.oracle.com/javase/8/docs/technotes/guides/jmx/
 .. _JMX documentation: http://docs.oracle.com/javase/8/docs/technotes/guides/management/agent.html#gdeum
 .. _JConsole: http://docs.oracle.com/javase/8/docs/technotes/guides/management/agent.html#gdeum
