@@ -18,6 +18,8 @@
 
 package io.crate.plugin;
 
+import io.crate.action.sql.SQLOperations;
+import io.crate.beans.NodeStatus;
 import io.crate.beans.QueryStats;
 import io.crate.execution.engine.collect.stats.JobsLogs;
 import org.apache.logging.log4j.Logger;
@@ -39,9 +41,10 @@ public class CrateMonitor {
     private final MBeanServer mbeanServer = ManagementFactory.getPlatformMBeanServer();
 
     @Inject
-    public CrateMonitor(JobsLogs jobsLogs, Settings settings) {
+    public CrateMonitor(JobsLogs jobsLogs, Settings settings, SQLOperations sqlOperations) {
         logger = Loggers.getLogger(CrateMonitor.class, settings);
         registerMBean(QueryStats.NAME, new QueryStats(jobsLogs));
+        registerMBean(NodeStatus.NAME, new NodeStatus(sqlOperations::isEnabled));
     }
 
     private void registerMBean(String name, Object bean) {
